# sat

./: .gitignore  .kateproject  AUTHORS  CMakeLists.txt  INSTALL  Makefile  README  README.md  build-clang.sh  build-clang_debug.sh  build.sh  build_debug.sh  clean-clang.sh  clean.sh  log4crc
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/Modules/: FindLog4C.cmake
data/: wikipedia.cnf
data/sudoku/: demon_01.cnf  diabolique_1991.cnf  esudoku-demon-511770.cnf
data/uf20-91/: uf20-01000.cnf
doc/: CMakeLists.txt  Doxyfile.in
perfs/: bench-clang.sh  bench-gcc.sh  log2csv.awk  solveSat-clang.csv  solveSat-gcc.csv
src/: CMakeLists.txt  Clause.cpp  Clause.h  Formula.cpp  History.h  Interpretation.cpp  Interpretation.h  Literal.h  Makefile  RawLiteral.h  Solver.h  alg_dp.c  alg_dp.cpp  alg_dp.h  checkSat.cpp  clause.cpp  clause.h  cnf.cpp  cnf.h  cnfloader.cpp  cnfloader.h  davis_putnam.c  davis_putnam.h  dpllsolver.cpp  dpllsolver.h  formula.cpp  formula.h  formulaobject.cpp  formulaobject.h  history.c  history.cpp  history.h  interpretation.c  interpretation.cpp  interpretation.h  libDP.c  libDP.h  libHist.c  libHist.h  libIntr.c  (+18 more)
src/core/: BasicSolutionChecker.cpp  BasicSolutionChecker.h  CMakeLists.txt  Clause.cpp  Clause.h  ClauseBuilder.cpp  ClauseBuilder.h  CnfLoader.cpp  CnfLoader.h  DpllSolver.cpp  DpllSolver.h  Formula.cpp  Formula.h  FormulaObject.cpp  FormulaObject.h  History.cpp  History.h  HistoryBasedDpllSolver.cpp  HistoryBasedDpllSolver.h  HistoryStep.cpp  HistoryStep.h  Interpretation.cpp  Interpretation.h  IterativeDpllSolver.cpp  IterativeDpllSolver.h  ListenableSolver.cpp  ListenableSolver.h  ListenerDispatcher.cpp  ListenerDispatcher.h  Literal.cpp  Literal.h  LiteralSelector.h  NoopSolverListener.cpp  NoopSolverListener.h  PolaritySelector.h  RawLiteral.cpp  RawLiteral.h  RecursiveDpllSolver.cpp  RecursiveDpllSolver.h  RemoveClauseStep.cpp  (+20 more)
src/heuristics/: CMakeLists.txt  FirstVariableSelector.cpp  FirstVariableSelector.h  LeastUsedPolaritySelector.cpp  LeastUsedPolaritySelector.h  LeastUsedVariableSelector.cpp  LeastUsedVariableSelector.h  MostUsedPolaritySelector.cpp  MostUsedPolaritySelector.h  MostUsedVariableSelector.cpp  MostUsedVariableSelector.h  PolarityCachingSelector.cpp  PolarityCachingSelector.h  PositiveFirstPolaritySelector.cpp  PositiveFirstPolaritySelector.h
src/history/: CMakeLists.txt  History.cpp  History.h  HistoryStep.cpp  HistoryStep.h  RemoveClauseStep.cpp  RemoveClauseStep.h  RemoveLiteralFromClauseStep.cpp  RemoveLiteralFromClauseStep.h
src/iterativesolver/: CMakeLists.txt  IterativeDpllSolver.cpp  IterativeDpllSolver.h  ResolutionStack.cpp  ResolutionStack.h  ResolutionStackLevel.cpp  ResolutionStackLevel.h
src/listeners/: BacktrackCounterListener.cpp  BacktrackCounterListener.h  CMakeLists.txt  ChronoListener.cpp  ChronoListener.h  LoggingListener.cpp  LoggingListener.h  StatisticsListener.cpp  StatisticsListener.h
src/recursivesolver/: CMakeLists.txt  HistoryStep.cpp  HistoryStep.h  RecursiveDpllSolver.cpp  RecursiveDpllSolver.h  RemoveClauseStep.cpp  RemoveLiteralFromClauseStep.cpp
src/sudoku/: CMakeLists.txt  SudokuLoader.cpp  SudokuLoader.h  solveSudoku.cpp
sudoku/: demon_01.cnf  demon_01.cnf.solution  diabolique_1991.cnf  diabolique_1991.cnf.solution  esudoku-demon-511770  esudoku-demon-511770.solution  gen_sudoku_constraints.py  sample_grid.cnf  sample_grid.cnf.solution  simon-01.cnf  simon-02.cnf  sudoku.sh  test-01.cnf.solution
